--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "guzzlehttp/guzzle": "^6.3",
         "intervention/image": "^2.5",
         "laravel/framework": "^7.24",
+        "laravel/helpers": "^1.4",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.4",
         "nesbot/carbon": "^2.41"
